# book_Advanced_Jinja

./: .gitignore  README.md  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  question.yml
.github/workflows/: ci.yml
.prompts/: 1_init_project.md  2_init_context.md  3_create_snippets.md  4_upgrade_recommendations.md  5_draft_chapter.md
.prompts/codegen/: best_practices.md
Chapters/: 0_Table_of_Contents.md  1_Primer.md  2_CodeGen.md  3_MultiLang.md  4_ConfigHell.md
Chapters/Snippets/4_ConfigHell/: snippets.md
Chapters/Snippets/5_Debuggability/: smart_templates.py
src/4_ConfigHell/: snippets.md
src/5_Debuggability/: smart_templates.py
src/smart_templates/: __init__.py  core.py  database_integration.py  fastapi_integration.py  py.typed  pytest_integration.py  services_integration.py
src/smart_templates/templates/fastapi/: error.html
src/university/api/: __init__.py  app.py
src/university/api/routes/: schools.py  students.py
src/university/models/: __init__.py
tests/: __init__.py  conftest.py  test_conftest.py
tests/api/: app.py  test_integration.py
tests/api/routes/: __init__.py  schools.py  students.py
tests/fixtures/: test_templates.py
tests/fixtures/templates/: base.html  error.html
tests/fixtures/templates/course/: detail.html  instructor_view.html  student_view.html
tests/fixtures/templates/email/: enrollment_confirmation.html
tests/fixtures/templates/enrollment/: confirmation.html
tests/fixtures/templates/macros/: course_components.html  navigation.html  student_components.html
tests/fixtures/templates/school/: admin_dashboard.html  dashboard.html  list.html  profile.html  transcript.html
tests/fixtures/templates/student/: active.html  completed.html  profile.html  reattempt.html  transcript.html
tests/models/: __init__.py  business_objects.py  test_business_objects.py
tests/smart_templates/: __init__.py  test_core.py  test_fastapi_integration.py
tests/unit/: __init__.py  test_core.py  test_fastapi_integration.py
tests/university/: test_api.py  test_business_objects.py
